Video Expertise. Claim. Adding min-height to fix size on mobile

--- a/app/scss/custom/views/_video-expertise.scss
+++ b/app/scss/custom/views/_video-expertise.scss
@@ -145,6 +145,7 @@ $left-aligment: 260px;
   width: 100%;
   text-align: center;
   padding: 6.5%;
+  min-height: 300px;
   .highligthed-claim__header {
     font-family: 'Open Sans';
     font-weight: bold;
